<resources>
    <string name="app_name">MenuAMano-APP</string>
    <string name="scan_ins">Mantenga el codigo en la pantalla para ingresar a nuestro menu</string>
    <string name="menu">Menu</string>
    <string name="title_activity_test_nav">TestNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre del local</string>
    <string name="nav_header_subtitle">Las mejores pastas de la region</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_menu_lateral"></string>
    <string name="categoria">Menu</string>
    <string name="carro">Carrito</string>
    <string name="lab_productos">Producto</string>
    <string name="lab_precio">Precio</string>
    <string name="lab_quitar">Quitar</string>
    <string name="lab_total">Total</string>
    <string name="detalles">Detalles</string>
    <string name="ingrediente">Ingredientes</string>
    <string name="porciones">Porciones aprox</string>
    <string name="admin">Administrador</string>
    <string name="add_sec_admin">Agregar seccion/categoria</string>
    <string name="edit_sec_admin">Editar seccion/categoria</string>
    <string name="del_sec_admin">Eliminar seccion/categoria</string>
    <string name="admin_sec">Administrar categorias</string>
    <string name="select_prod_lab">Selecciona una seccion/categoria</string>
    <string name="add_prod_lab">Agregar producto</string>
    <string name="edit_prod_lab">Editar producto</string>
    <string name="del_prod_lab">Eliminar producto</string>
    <string name="admin_prod">Administrar productos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
