<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuCFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contenedor_carrito"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/carro_h"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/carrito"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                app:layout_constraintEnd_toEndOf="@+id/toolbar2"
                app:layout_constraintTop_toTopOf="@+id/toolbar2" />

            <TextView
                android:id="@+id/carrito_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/carro"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/carro_h"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/white_fade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head"
            app:layout_constraintVertical_bias="0.0">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/up_body"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/down_body"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:id="@+id/scroll_tabla"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableLayout
                        android:id="@+id/tabla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteY="50dp">

                        <TableRow
                            android:id="@+id/fila_labels"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/lab_producto"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lab_productos"
                                android:textAlignment="textStart"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <Space
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/lab_precio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lab_precio"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <Space
                                android:layout_width="30dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/lab_quitar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lab_quitar"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/divisores_tabla"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <View
                                android:id="@+id/divider23"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/black" />

                            <View
                                android:id="@+id/divider24"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/black" />

                            <View
                                android:id="@+id/divider25"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/black" />

                            <View
                                android:id="@+id/divider26"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/black" />

                            <View
                                android:id="@+id/divider27"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/black" />
                        </TableRow>

                    </TableLayout>
                </ScrollView>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/down_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBarras"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lab_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/toolbar3" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="87dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@android:color/background_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toTopOf="@+id/toolbar3"
                    app:srcCompat="@android:color/darker_gray" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="118dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/pedido_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar3"
                    app:layout_constraintTop_toTopOf="@+id/toolbar3" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>